--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 pkg-resources==0.0.0
 prompt-toolkit==3.0.5
+psycopg2-binary==2.8.5
 ptyprocess==0.6.0
 Pygments==2.6.1
 pytz==2019.3
