--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
+amqp==2.5.2
 asgiref==3.2.7
 backcall==0.1.0
+billiard==3.6.3.0
+celery==4.4.2
 decorator==4.4.2
 Django==2.2.11
 django-debug-toolbar==2.2
 django-extensions==2.2.9
+Faker==4.0.3
 ipython==7.13.0
 ipython-genutils==0.2.0
 jedi==0.16.0
+kombu==4.6.8
 parso==0.6.2
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -15,8 +20,11 @@ prompt-toolkit==3.0.5
 psycopg2-binary==2.8.5
 ptyprocess==0.6.0
 Pygments==2.6.1
+python-dateutil==2.8.1
 pytz==2019.3
 six==1.14.0
 sqlparse==0.3.1
+text-unidecode==1.3
 traitlets==4.3.3
+vine==1.3.0
 wcwidth==0.1.9
